tests/ui/parser/variadic-ffi-semantic-restrictions.stderr
error: `...` is not supported for non-extern functions
  --> $DIR/variadic-ffi-semantic-restrictions.rs:6:19
   |
LL | fn f1_1(x: isize, ...) {}
   |                   ^^^

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:6:19
   |
LL | fn f1_1(x: isize, ...) {}
   |                   ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe fn f1_1(x: isize, ...) {}
   | ++++++

error: `...` is not supported for non-extern functions
  --> $DIR/variadic-ffi-semantic-restrictions.rs:10:9
   |
LL | fn f1_2(...) {}
   |         ^^^

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:10:9
   |
LL | fn f1_2(...) {}
   |         ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe fn f1_2(...) {}
   | ++++++

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:14:30
   |
LL | extern "C" fn f2_1(x: isize, ...) {}
   |                              ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe extern "C" fn f2_1(x: isize, ...) {}
   | ++++++

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:17:20
   |
LL | extern "C" fn f2_2(...) {}
   |                    ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe extern "C" fn f2_2(...) {}
   | ++++++

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:20:20
   |
LL | extern "C" fn f2_3(..., x: isize) {}
   |                    ^^^

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:20:20
   |
LL | extern "C" fn f2_3(..., x: isize) {}
   |                    ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe extern "C" fn f2_3(..., x: isize) {}
   | ++++++

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:24:30
   |
LL | extern "C" fn f3_1(x: isize, ...) {}
   |                              ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe extern "C" fn f3_1(x: isize, ...) {}
   | ++++++

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:27:20
   |
LL | extern "C" fn f3_2(...) {}
   |                    ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe extern "C" fn f3_2(...) {}
   | ++++++

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:30:20
   |
LL | extern "C" fn f3_3(..., x: isize) {}
   |                    ^^^

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:30:20
   |
LL | extern "C" fn f3_3(..., x: isize) {}
   |                    ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe extern "C" fn f3_3(..., x: isize) {}
   | ++++++

error: functions cannot be both `const` and C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:34:1
   |
LL | const unsafe extern "C" fn f4_1(x: isize, ...) {}
   | -----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   | |                                         |
   | `const` because of this                   C-variadic because of this

error: functions cannot be both `const` and C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:38:1
   |
LL | const extern "C" fn f4_2(x: isize, ...) {}
   | -----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   | |                                  |
   | `const` because of this            C-variadic because of this

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:38:36
   |
LL | const extern "C" fn f4_2(x: isize, ...) {}
   |                                    ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | constunsafe  extern "C" fn f4_2(x: isize, ...) {}
   |      ++++++

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:43:26
   |
LL | const extern "C" fn f4_3(..., x: isize, ...) {}
   |                          ^^^

error: functions cannot be both `const` and C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:43:1
   |
LL | const extern "C" fn f4_3(..., x: isize, ...) {}
   | -----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   | |                                       |
   | `const` because of this                 C-variadic because of this

error: functions with a C variable argument list must be unsafe
  --> $DIR/variadic-ffi-semantic-restrictions.rs:43:41
   |
LL | const extern "C" fn f4_3(..., x: isize, ...) {}
   |                                         ^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | constunsafe  extern "C" fn f4_3(..., x: isize, ...) {}
   |      ++++++

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:49:13
   |
LL |     fn e_f2(..., x: isize);
   |             ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:56:23
   |
LL |     fn i_f1(x: isize, ...) {}
   |                       ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:58:13
   |
LL |     fn i_f2(...) {}
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:60:13
   |
LL |     fn i_f3(..., x: isize, ...) {}
   |             ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:60:28
   |
LL |     fn i_f3(..., x: isize, ...) {}
   |                            ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:63:13
   |
LL |     fn i_f4(..., x: isize, ...) {}
   |             ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:63:28
   |
LL |     fn i_f4(..., x: isize, ...) {}
   |                            ^^^

error: functions cannot be both `const` and C-variadic
  --> $DIR/variadic-ffi-semantic-restrictions.rs:66:5
   |
LL |     const fn i_f5(x: isize, ...) {}
   |     -----^^^^^^^^^^^^^^^^^^^---
   |     |                       |
   |     |                       C-variadic because of this
   |     `const` because of this

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:66:29
   |
LL |     const fn i_f5(x: isize, ...) {}
   |                             ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:73:23
   |
LL |     fn t_f1(x: isize, ...) {}
   |                       ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:75:23
   |
LL |     fn t_f2(x: isize, ...);
   |                       ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:77:13
   |
LL |     fn t_f3(...) {}
   |             ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:79:13
   |
LL |     fn t_f4(...);
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:81:13
   |
LL |     fn t_f5(..., x: isize) {}
   |             ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:81:13
   |
LL |     fn t_f5(..., x: isize) {}
   |             ^^^

error: `...` must be the last argument of a C-variadic function
  --> $DIR/variadic-ffi-semantic-restrictions.rs:84:13
   |
LL |     fn t_f6(..., x: isize);
   |             ^^^

error: associated functions cannot have a C variable argument list
  --> $DIR/variadic-ffi-semantic-restrictions.rs:84:13
   |
LL |     fn t_f6(..., x: isize);
   |             ^^^

error[E0493]: destructor of `VaListImpl<'_>` cannot be evaluated at compile-time
  --> $DIR/variadic-ffi-semantic-restrictions.rs:34:43
   |
LL | const unsafe extern "C" fn f4_1(x: isize, ...) {}
   |                                           ^^^   - value is dropped here
   |                                           |
   |                                           the destructor for this type cannot be evaluated in constant functions

error[E0493]: destructor of `VaListImpl<'_>` cannot be evaluated at compile-time
  --> $DIR/variadic-ffi-semantic-restrictions.rs:38:36
   |
LL | const extern "C" fn f4_2(x: isize, ...) {}
   |                                    ^^^   - value is dropped here
   |                                    |
   |                                    the destructor for this type cannot be evaluated in constant functions

error[E0493]: destructor of `VaListImpl<'_>` cannot be evaluated at compile-time
  --> $DIR/variadic-ffi-semantic-restrictions.rs:66:29
   |
LL |     const fn i_f5(x: isize, ...) {}
   |                             ^^^   - value is dropped here
   |                             |
   |                             the destructor for this type cannot be evaluated in constant functions

error: aborting due to 38 previous errors

For more information about this error, try `rustc --explain E0493`.
